css/style.css
body { 
  font-family: 'Montserrat';
  margin: 0;
}
nav ul {
  list-style-type: none;
  display: flex;
  flex-flow: row-wrap;
  justify-content: center;
  align-items: center;
  gap: 4rem;
  height: 3.5rem;
}
nav li:first-child {
  flex-basis: 50%;
  text-align: left;
}
.active {
  color: #FA4A0C
}
/* front section */
#front ul{
  display:flex;
  flex-flow: row-wrap;
  justify-content: center;
  max-height: 400px;
  list-style-type: none;
  place-items: center;
  margin: 0;
  padding: 0;
}
/* greyline */
.grey-line {
  border: 1.5px solid #E4E4E4;
  margin: 6rem auto 1rem auto;
  width: 60%;
}
/* top section */
#top {
  font-family: 'Poppins';
  background: url("../images/top-bg.png") ;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  color: #fff;
  /* background-size: 100% auto; */
  height:74.85vh;
  padding: 0;
  margin: 0;
}
#top div, #download div {
  text-align: center;
  justify-content: center;
  align-items: center;
  padding: 9rem 4rem;
}
#top a, #download a {
  border-radius: 30px;
  padding: 10px 20px;
  margin:0.5rem;
  text-decoration: none;
  width: 236px;
  height: 68px;
  color: #fff;
}
.play-store-button {
  background-color: #FA4A0C;
}
.app-store-button {
  background: transparent;
  border:  1px solid #fff;
}
h2 {
  font-size: 150%;
}
/* App section */
#app h2:first-child{
  justify-content: center;
  text-align: center;
}
#app .wrapper{
  width:70%;
  display: flex;
  flex-flow: row-wrap;
  justify-content: flex-start;
  gap: 0 20px;
  margin: 0 auto;
  align-items: center;
  max-height: 80vh;
  overflow: hidden;
}
#app p {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 500;
  letter-spacing: 0.2px;
  color: #737373;
}
#app h3 {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  letter-spacing: 0.1px;
  color: #FA4A0C;
}
#app .text {
  padding: 0 4rem;
}
/* download app */
#download {
  background: url("../images/footer-bg.png");
  background-size: 100% auto;
  font-family: 'Poppins';
  justify-content: center;
  align-items: center;
  font-weight: 700;
  color: #fff;
}
#download a {
  border-radius: 10px;
}
/* footer */
footer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-flow: row-wrap;
  justify-content: space-around;
  align-items: center;
  bottom: 0;
  color: #5C5C5C;
}
.fa {
  padding: 10px;
  font-size: 2rem !important;
  background-color:#fff;
  color: #FA4A0C;
}
@media (max-width: 650px) {
  #mobile-nav{
    display: block !important;
  }
  #mobile-nav button{
    float: right;
    align-items: center;
    margin: 1rem;
  }
  #mobile-nav-list ul{
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
    list-style-type: none;
    width: 100%;
    text-align: center;
    background-color: #737373;
  }
  #mobile-nav-list li {
    border-bottom: 1px solid #fff;
    padding: 0.5rem;
    color: white;
  }
  nav ul {
    display: none;
  }
  #download {
    background-image: none;
    background-color: #252B42;
  }
  footer .logo {
    display:none;
  }
  footer ul {
    display:block;
    align-items: center;
    text-align: center;
    line-height: 2;
    padding: 2rem;
  }
  #top {
    background-image: none;
    background-color: #FAFAFA;
    font-weight: 700;
    color: #000;
    padding: 0;
    margin: 0;
  }
  #top .play-store-button {
    background-color: #FA4A0C;
  }
  #top .app-store-button {
    background: white;
    border:  1px solid #FA4A0C;
    color: #FA4A0C;
  }
  #app .wrapper{
    width:90%;
    flex-direction: column;
    max-height: 150vh;
    justify-content: center;
    align-items: center;
  }
  #app img {
    order: 2;
    flex-basis: 100%;
    height: 500px;
    margin: -10vh auto;
  }
}
@media (max-width: 1000px) {
  #app .wrapper{
    width:100%;
    margin: 0;
    padding: 0;
  }
}
#mobile-nav{
  display:none;
}

